# CodeBase

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/Basic/: CMakeLists.txt  hello_world.cpp
C++/GoogleTest/: CMakeLists.txt  fun.cc  fun.h  hello_test.cc
C++/ModernC++/: memo.txt
C++/ModernC++/C++11/: CMakeLists.txt  c++11_test.h  constexpr.cpp  cpp_reference.cpp  list_initialize.cpp  memo.txt  template_default_type.cpp  type_deduce.cc  using_alias.cc
C++/OOP/: CMakeLists.txt  animal.h  interview  interview.cpp  memo.text  warrior.h
C++/Polymorphism/: VirtualFunction.cpp  virtual_function.cpp
C++/STL/: CMakeLists.txt  map_demo.cc  map_demo.h  memo.txt  set_demo.cc  set_demo.h  test.cc  unordered_map_demo.cc  unordered_map_demo.h  unordered_set_demo.cc  unordered_set_demo.h  vector_demo.cc  vector_demo.h  vector_test.cc
C++/Temp/: test  test.cc
C++/google_test/: CMakeLists.txt  hello_test.cc
CPP/OOP/: advance.cpp  basic.cpp
CPP/STL/: CMakeLists.txt  map_demo.cc  map_demo.h  memo.txt  unordered_map_demo.h  unordered_set_demo.h
CPP/basic/: CMakeLists.txt  hello_world.cpp
CPP/google_test/: fun.cc  fun.h  hello_test.cc
CPP/modern_cpp/: memo.txt
DesignPattern/: singlePattern.txt
Golang/basic/: main.go
Golang/concurrency/: GOMAXPROCS.go  autoSchemeGoroutine.go  copyInGoroutine.go  goroutineSize.go  simpleSleepTest.go
Java/: pom.xml
Java/Annotation/: BasicAnnotation.java
Java/Basic/: Condition.java  Loop.java  NumberMath.java  PrintTest.java  StaticTest.java
Java/Container/: HashSetTest.java
Java/Generics/: GenericBasic.java
Java/OOP/: Abstract.java  AccessControl.java  Basic.java  Combination.java  Extend.java  FinalEx.java  InitializeConstructor.java  InnerClass.java  Interface.java  ThisTest.java  Upcasting.java
Java/Stream/: BasicStream.java
Java/Type/: LoadClass.java  Reflect.java
Java/annotation/: BasicAnnotation.java  InheritableAnnotation.java
Java/basic/: CommentStyle.java  Condition.java  EnumEx.java  Loop.java  MethodReference.java  NumberMath.java  PrintTest.java  StaticTest.java
Java/container/: ArrayListTest.java  ContainerBasic.java  ContainerSafety.java  HashMapTest.java  HashSetTest.java  IteratorTest.java  JavaContainer.txt  LinkListTest.java  ListTest.java  SetTest.java
Java/doc/: java-memory-model.txt  reference.txt
Java/generics/: GenericBasic.java  GenericErasure.java  GenericInterface.java  GenericMethod.java
Java/io/: BasicIO.java
Java/oop/: Abstract.java  Basic.java  Extend.java  FinalEx.java  InitializeConstructor.java  InnerClass.java  StaticEx.java  Upcasting.java
Java/stream/: BasicStream.java  Java8Tester.java  ParallelStream.java
Java/type/: LoadClass.java  Reflect.java  ReflectBasic.java  UseClass.java
Python/DataType/: data2.txt  python_dictionary.ipynb  python_dynamic.ipynb  python_list.ipynb  python_string.ipynb  tuple.ipynb  (+1 more)
(+345 files in other folders)
